After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 646045 - Startup notification not working right when already running
Startup notification not working right when already running
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-03-29 07:33 UTC by Alexander Larsson
Modified: 2011-03-29 15:40 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
shell: Turn off spinner cursor when launched (791 bytes, patch)
2011-03-29 12:50 UTC, Bastien Nocera
committed Details | Review

Description Alexander Larsson 2011-03-29 07:33:22 UTC
When there is an instance of the control center running and I start a new one via gnome-shell it correctly switches the existing copy to the new panel.

However, something is still not right, because the pointer keeps spinning until it times out.
Comment 1 Bastien Nocera 2011-03-29 12:50:04 UTC
Created attachment 184579 [details] [review]
shell: Turn off spinner cursor when launched

Startup notification should be stopped when the window appears.
Comment 2 Bastien Nocera 2011-03-29 15:40:15 UTC
Attachment 184579 [details] pushed as bd69290 - shell: Turn off spinner cursor when launched