shell: Turn off spinner cursor when launched

Startup notification should be stopped when the window appears.

https://bugzilla.gnome.org/show_bug.cgi?id=646045